ARROW-14522: [C++] Fix validation of ExtensionType with null storage type